# rpi-dodgers

./: .gitignore  .pre-commit-config.yaml  README.md  SpringTraining.csv  commit.sh  data_types.py  demo.py  postseasonschedule.csv  program.py  program_api.py  pyproject.toml  schedule.csv  test.py
.github/workflows/: ci.yml  deploy.yml
