[project]
name = "rpi-dodgers"
version = "0.1.0"
description = "Raspberry Pi Sense HAT ticker that announces Dodgers games and scoring plays"
authors = [{ name = "Ryan Cheley" }]
requires-python = ">=3.9"
dependencies = [
    "requests",
    "python-dateutil",
    # Raspberry Pi hardware library — only installs on the Pi (Linux).
    "sense-hat ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "ty",
    "ruff",
    "pre-commit",
]

[tool.uv]
# Not a distributable package, just an app — skip the build backend.
package = false

[tool.ruff]
target-version = "py39"

[tool.ty.environment]
python-version = "3.9"

[tool.ty.rules]
# The sense_hat import is only unresolved off-Pi, so the ignore comment on it
# is "unused" on machines where sense_hat resolves (e.g. Linux CI). Don't fail.
unused-ignore-comment = "ignore"
